Fix for non-wrapping info window.

--- a/server/fishtest/static/css/application.css
+++ b/server/fishtest/static/css/application.css
@@ -103,6 +103,10 @@ body {
   border: none;
 }
 
+.run-info {
+    word-break: break-word;
+}
+
 a {
   color: #409e42;
   text-decoration: none;
